cli/tests/snapshot/inputs/errors/typedcheck_strict_mode_is_strict.ncl
# capture = 'stderr'
# command = ['typecheck', '--strict-typechecking']
let x = (1 + 1) in (x + 1 : Number)
